# deciding-isotactics

./: CMakeLists.txt  alignment.json
iso-alignment/include/: RelationGraph.hpp
iso-alignment/src/: CMakeLists.txt  Main.cpp
iso-alignment/tests/: rgraph.dot
iso-alignment/tests/ex1/: alignment.json  out.txt  rgraph.dot
iso-alignment/tests/ex10/: m1.dot  witness.dot
iso-alignment/tests/ex11/: alignment.json  m1.dot  m1.dot_m2.dot_alignment.json_witness_graph.dot  m2.dot
iso-alignment/tests/ex2/: alignment.json  m1.dot_m2.dot_alignment.json_witness_graph.dot  witness.dot
iso-alignment/tests/ex3/: alignment.json  m1.dot_m2.dot_alignment.json_witness_graph.dot
iso-alignment/tests/ex5/: m1.dot  m2.dot
iso-alignment/tests/ex6/: m1.dot  m2.dot  rgraph.dot
iso-alignment/tests/ex7/: m1.dot  m2.dot
iso-alignment/tests/ex8/: alignment.json  rgraph.dot  witness.dot
iso-alignment/tests/ex9/: m1.dot  m2.dot
iso-lib/src/: CompareUtils.cpp
iso-search/include/: AlignmentGraph.hpp  BinaryRelation.hpp  IsoDecisionAdapter.hpp  IsoSearch.hpp  Job.hpp  SpanningTreeGrowIteratorNode.hpp  SpanningTreeShrinkIteratorNode.hpp  ThreadSafeQueue.hpp  Worker.hpp  WorkerPool.hpp
iso-search/src/: CMakeLists.txt  Main.cpp
iso-search/tests/ex2/: alignment.json  m1.dot  m2.dot
